Fix docs examples on ios

--- a/docs/src/components/CodePlayground/CodePlaygroundPreview.css
+++ b/docs/src/components/CodePlayground/CodePlaygroundPreview.css
@@ -9,6 +9,7 @@
 
   playground-preview {
     position: relative;
+    touch-action: none;
   }
 
   pretty-json {
